<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:backgroundTint="@color/backgroundMainApp"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/cloud_config_azure_iot_central_pnp_config_app_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/cloud_azure_iot_central_pnp_application_name"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/cloud_azure_iot_central_pnp_application_help" />

            <ImageView
                android:id="@+id/cloud_config_azure_iot_central_pnp_element_config_help"
                android:layout_width="0dp"
                android:layout_height="32sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_help_24"
                app:tint="@color/colorPrimary" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cloud_azure_iot_central_pnp_application_shareable_title"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cloud_config_azure_iot_central_pnp_element_config_shareable_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="6"
                android:singleLine="true"
                android:fadingEdge="horizontal"
                android:text="@string/cloud_azure_iot_central_pnp_application_shareable_link"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/cloud_config_azure_iot_central_pnp_element_config_share"
                android:layout_width="0dp"
                android:layout_height="32sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_share_24"
                app:tint="@color/colorPrimary"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cloud_azure_iot_central_pnp_application_shareable_app_name"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cloud_config_azure_iot_central_pnp_element_config_app_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:inputType="textNoSuggestions"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloud_azure_iot_central_pnp_application_shareable_app_azure_site_end"
                android:layout_gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cloud_azure_iot_central_pnp_application_shareable_api_token"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/cloud_config_azure_iot_central_pnp_config_app_scan_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/cloud_config_azure_iot_central_pnp_config_app_qr_code"
            app:icon="@drawable/ic_baseline_qr_code_scanner_24"
            android:backgroundTint="@color/colorPrimary"
            app:iconPadding="8dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cloud_config_azure_iot_central_pnp_element_config_received_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:inputType="textNoSuggestions"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cloud_config_azure_iot_central_pnp_config_app_negative"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:textColor="@color/colorPrimary" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cloud_config_azure_iot_central_pnp_config_app_positive"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:visibility="invisible"
                tools:visibility="visible"
                android:text="Done"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>